# aula-assistant

./: .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  SECURITY.md  config.yaml  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: AUTHORS.txt
.github/ISSUE_TEMPLATE/: 0-bug-report.md  1-security_vulnerability.md  2-feature-request.md
crates/artnet/: Cargo.toml  README.md
crates/artnet/src/: error.rs  lib.rs
crates/artnet/src/test/: package.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/ptmahdbt42/: Cargo.toml  README.md
crates/ptmahdbt42/src/: error.rs  lib.rs  request.rs  response.rs
crates/ptmahdbt42/src/test/: request.rs
crates/windows/: Cargo.toml
crates/windows/src/: lib.rs
etc/: config.schema.json
examples/: config.yaml
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: mini-view-button.tsx  view-button.tsx
frontend/src/components/icons/: symbols.tsx  tech.tsx
frontend/src/components/ui/: button.tsx  context-menu.tsx
frontend/src/lib/: audio.ts  beamer.ts  lighting.ts  utils.ts
frontend/src/views/: error.tsx  index.tsx
frontend/src/views/audio/: index.tsx
frontend/src/views/beamer/: index.tsx
frontend/src/views/help/: index.tsx  support.tsx
frontend/src/views/lighting/: index.tsx
frontend/src/views/start/: index.tsx
server/: .env  .gitignore  .prettierrc.json  config.json  package.json  pnpm-lock.yaml  tsconfig.json
server/src/: config.ts  env.ts  index.ts
server/src/api/routes/: beamer.ts  dmx.ts  x32.ts
server/src/controller/: BeamerController.ts
server/src/controller/dmx/: DMXController.ts  patch.ts
server/src/controller/x32/: MC.ts  X32.ts  X32Channel.ts
server/src/lib/: pt-ex12k.ts  pt-ma-hdbt42.ts  x32.ts
server/src/lib/core/: artnet.ts  osc.ts  tcp.ts
server/src/services/: ArtNetService.ts  BeamerService.ts  BeamerTcpService.ts  OSCx32Service.ts
server/src/utils/: logger.ts  trycatch.ts
server/src/utils/beamer_http/: buildRequestPackage.ts  consts.ts  parseBeamerResponse.ts  parseFON.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/artnet/: lib.rs  mod.rs
src-tauri/src/commands/: artnet.rs  beamer.rs  mod.rs  security.rs  startup_data.rs
src-tauri/src/config/: error.rs  file.rs  load.rs  mod.rs  runtime.rs
src-tauri/src/config/file/: fs.rs  lib.rs  mod.rs  schema.rs  yaml.rs
src-tauri/src/config/runtime/: builder.rs  config.rs  mod.rs
src-tauri/src/test/: artnet.rs  mod.rs
src/components/: mini-view-button.tsx  pin-input.tsx  text-utils.tsx  view-button.tsx  view-card.tsx
src/components/icons/: index.ts  tech.tsx  window.tsx
src/components/layout/: splash.tsx
src/components/layout/app-bar/: icons.tsx  index.ts  index.tsx  menu-app-bar.tsx  trafic-lights.tsx
src/components/ui/: command.tsx  menubar.tsx
src/contexts/: startup-data.tsx  window.tsx
src/lib/: advanced.ts  beamer.ts  dialog.ts  lighting.ts
src/styles/: global.css
src/views/: error.tsx  index.tsx
src/views/advanced/: auth.tsx
src/views/audio/: index.tsx
src/views/beamer/: index.tsx
src/views/help/: index.tsx  support.tsx
src/views/lighting/: index.tsx
