[package]
name = "aula_assistant"
version = "0.1.0"
edition = "2024"
publish = false
description = "A user-friendly media control system used in the Gymnasium Riedberg auditorium."
repository = "https://github.com/grb-technik/aula_assistant"
documentation = "https://github.com/grb-technik/aula_assistant/blob/master/README.md"
authors = [
    "Christian Fuchte <christian.fuchte@grb-online.net>"
]

[lib]
name = "aula_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.41", features = ["cargo"] }
