[package]
name = "aula-assistant"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
publish = false
description = "A user-friendly media control system used in the Gymnasium Riedberg auditorium."
repository = "https://github.com/grb-technik/aula-assistant"
readme = "https://github.com/grb-technik/aula-assistant/blob/master/README.md"
authors = ["Christian Fuchte <christian.fuchte@grb-online.net>"]

[lib]
name = "aula_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4.41"

[dependencies]
artnet = { path = "../crates/artnet" }
cli = { path = "../crates/cli" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
log = "0.4.27"
serde_yaml = "0.9.34"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
