[package]
name = "ptmahdbt42"
description = "tiny implementation of all needed features of the PT-MA_HDBT42's RS232 passthrough protocol via network api"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors = ["Christian Fuchte <christian.fuchte@grb-online.net>"]

[dependencies]
