[package]
name = "windows"
description = "!!!windows-only!!! crate for windows-specific functionality"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors = ["Christian Fuchte <christian.fuchte@grb-online.net>"]

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
